[package]
name = "bb8-lapin"
version = "0.7.0"
authors = ["Adrian Benavides <adri.benavides312@gmail.com>"]
repository = "https://github.com/adrianbenavides/bb8-lapin"
description = "r2d2-lapin, but for async tokio based connections"
license = "MIT"
edition = "2021"

[dependencies]
bb8 = "0.9"
lapin = "3.3"

[dev-dependencies]
dotenv = "0.15"
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-executor-trait = "3.1"
tokio-reactor-trait = "4.1"
